--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="../index.html">Home</a>
+        <a href="index.html">Home</a>
         <ul>
         <li><a href="recipes/lasagna.html" target="_blank">Lasagna</a></li>
         <li><a href="recipes/flat-iron-steak.html" target="_blank">Flat Iron Steak</a></li>
